Thu Mar 27 21:20:20 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* added real time timer (rtimer) analog to timer

	* added command-line option "-d ticks_per_second" and "-m
	  min_displayed_time_in_sec" and chahnged timer accordingly

	* added some #ifdef HAVE_FGLM in fglm*.cc 
	

Wed Mar 26 14:02:15 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* added reference counter to links, updated slKill, slCopy, slInit
	* various small bug fixes for Batch mode

Mon Mar 24 14:27:26 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* sing_mp.cc (slOpenWriteMPFile): Added append and write mode to
	  open MP:file 

Sun Mar 23 20:48:41 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Get.cc (InitIdentifierLeftv): Fixed bug which did not do
	  pSetm(p) after creating a poly out of a variable

Thu Mar 20 11:57:00 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>

	* sing_mp.cc (slInitBatchLink): initialized silink such that
	  l->argv[0] == "MP:connect" (otherwise, slInitMP failed)

Wed Mar 19 15:38:08 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>

	* hannes fixed maFindPerm to reflect new names <->parameter scheme 

	* sing_mp.cc (mpsr_IsMPLink): fixed it

	* Makefile (tags): added target tags
